--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "jsonschema>=4.23.0",
     "fastapi>=0.115.5",
     "uvicorn>=0.32.0",
+    "python-docx>=1.1.2",
 ]
 
 [project.optional-dependencies]
