--- a/extensions/chrome-intake/src/manifest.json
+++ b/extensions/chrome-intake/src/manifest.json
@@ -3,7 +3,7 @@
   "name": "News Coverage Intake",
   "version": "0.1.0",
   "description": "Capture entertainment news articles and send to the ingest API.",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["storage", "activeTab", "scripting", "contextMenus"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js",
